Move regex to appropriate place

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             }
 
             function CalculateDPS(){
-                var dps = parseInt($(DPSInput).val());
+                var dps = parseInt($(DPSInput).val().replace(/,/g, ""));
                 var hours = parseInt($(HourInput).val());
                 var minutes = parseInt($(MinuteInput).val());
                 var seconds = parseInt($(SecondInput).val());
@@ -237,7 +237,7 @@
                     }
                 });
                 $(DPSInput).focusout(function (){
-                    var val = parseInt($(DPSInput).val().replace(/,/g, ""));
+                    var val = parseInt($(DPSInput).val());
                     $(DPSInput).val(numberWithCommas(val));
                 });
                 $(DPSInput).focus(function (){
