Add link to enhancement calc

--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
             </div>
         </div>
         <div class="devnote">
-            Made with love by Narnia#7777 💖
+            Made with love by Narnia#7777 💖<br />
+            <a href="https://xnarnia.github.io/enhancement-calc/">Check out my Enhancement Calculator!</a>
         </div>
     </body>
 </html>
